--- a/templates/core/meta/lista_metas.html
+++ b/templates/core/meta/lista_metas.html
@@ -3,7 +3,10 @@
 {% block conteudo %} 
 
 <div class="container mt-5">
-    <h2>Metas</h2>
+    <div class="text-center mb-4">
+        <h2 class="fw-bold"><i class="bi bi-plus-circle text-primary"></i> Metas</h2>
+        <p class="lead">Acompanhe suas metas e monitore o crescimento do seu negócio.</p>
+    </div>
     {% if metas %}
         <table class="table table-hover text-center mt-3">
             <thead>
