--- a/templates/core/pedido/lista_pedidos.html
+++ b/templates/core/pedido/lista_pedidos.html
@@ -10,7 +10,10 @@
     </style>
 
     <div class="container mt-5">
-        <h2>Pedidos</h2>
+        <div class="text-center mb-4">
+            <h2 class="fw-bold"><i class="bi bi-bag text-primary"></i> Pedidos</h2>
+            <p class="lead">Acompanhe seus pedidos e veja os produtos mais solicitados pelos seus clientes.</p>
+        </div>
         {% if pedidos %}
             <div class="row">
                 <form method="get" class="form-inline mb-3 d-flex">
