--- a/templates/core/produto/lista_produtos.html
+++ b/templates/core/produto/lista_produtos.html
@@ -4,7 +4,10 @@
 
     <div class="container mt-5">
         <a href="{% url 'cadastrar_produto' %}" class="btn btn-success mb-5">Cadastrar Produto</a>
-        <h2>Produtos</h2>
+        <div class="text-center mb-4">
+            <h2 class="fw-bold"><i class="bi bi-box text-primary"></i> Produtos Disponíveis</h2>
+            <p class="lead">Visualize seus produtos disponíveis e acompanhe o estoque para mantê-lo sempre organizado.</p>
+        </div>
         <div class="row">
             <form method="get" class="form-inline mb-3 d-flex">
                 <input type="text" name="q" class="form-control me-2" placeholder="Pesquisar produto" value="{{ request.GET.q }}">
