--- a/templates/core/valepresente/listar.html
+++ b/templates/core/valepresente/listar.html
@@ -10,7 +10,10 @@
     </style>
 
     <div class="container mt-5">
-        <h2>Listagem de Vale Presente</h2>
+        <div class="text-center mb-4">
+            <h2 class="fw-bold"><i class="bi bi-gift text-primary"></i> Listagem de Vale-Presentes</h2>
+            <p class="lead">Acompanhe seus vale-presentes e veja os vales dos seus clientes para uma gestão mais eficiente.</p>
+        </div>
         <div class="row">
             <form method="get" class="form-inline mb-3 d-flex">
                 <input type="text" name="q" class="form-control me-2" placeholder="Pesquisar vale" value="{{ request.GET.q }}">
