--- a/templates/users/cliente/aniversariantes.html
+++ b/templates/users/cliente/aniversariantes.html
@@ -3,7 +3,10 @@
 {% block conteudo %} 
 
     <div class="container mt-5">
-        <h2>Clientes Aniversáriantes</h2>
+        <div class="text-center mb-4">
+            <h2 class="fw-bold"><i class="bi bi-gift text-primary"></i> Aniversáriantes</h2>
+            <p class="lead">Acompanhe os clientes aniversariantes e entre em contato para parabenizá-los.</p>
+        </div>
         {% if aniversariantes %}
             <table class="table table-hover">
                 <thead>
