--- a/templates/core/relatorios/home.html
+++ b/templates/core/relatorios/home.html
@@ -18,7 +18,7 @@
                         <div class="mb-3 text-primary" style="font-size:2.5rem;"><i class="bi bi-calendar-range"></i></div>
                         <h5 class="card-title">Vendas por Período</h5>
                         <p class="text-muted text-center">Relatório detalhado de vendas por período, incluindo produtos, quantidades, valores e desempenho.</p>
-                        <a href="#" class="btn btn-outline-primary rounded-pill mt-auto">Gerar Relatório</a>
+                        <a href="{% url 'vendas_periodo' %}" class="btn btn-outline-primary rounded-pill mt-auto">Gerar Relatório</a>
                     </div>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                         <div class="mb-3 text-success" style="font-size:2.5rem;"><i class="bi bi-person-lines-fill"></i></div>
                         <h5 class="card-title">Vendas por Usuário</h5>
                         <p class="text-muted text-center">Relatório detalhado de vendas por usuário, incluindo produtos, quantidades, valores e desempenho.</p>
-                        <a href="#" class="btn btn-outline-success rounded-pill mt-auto">Gerar Relatório</a>
+                        <a href="{% url 'vendas_usuario' %}" class="btn btn-outline-success rounded-pill mt-auto">Gerar Relatório</a>
                     </div>
                 </div>
             </div>
