--- a/templates/users/empresa/lista_empresas.html
+++ b/templates/users/empresa/lista_empresas.html
@@ -3,10 +3,10 @@
 {% block conteudo %} 
 
     <div class="container mt-5">
-        <h2>Listagem de Empresas</h2>
         <a class="btn btn-success" href="{% url 'cadastrar_empresa' %}">Cadastrar Nova Empresa</a>
         <a class="btn btn-primary" href="{% url 'cadastrar_usuario_admin' %}">Cadastrar Usuário</a>
-        <table class="table table-hover mt-3">
+        <h2 class="mt-5">Listagem de Empresas</h2>
+        <table class="table table-hover mt-5">
             <thead>
                 <tr>
                     <th>ID</th>
