--- a/templates/core/tamanho/listar.html
+++ b/templates/core/tamanho/listar.html
@@ -2,6 +2,11 @@
 {% load static bootstrap %}
 {% block conteudo %} 
 
+    <div class="text-center mb-4">
+        <h2 class="fw-bold"><i class="bi bi-arrows-expand text-primary"></i> Listagem de Tamanhos</h2>
+        <p class="lead">Visualize e gerencie os tamanhos disponíveis para seus produtos, garantindo organização e padronização no estoque.</p>
+    </div>
+
     <div class="container mt-5">
         <a href="{% url 'cadastrar_tamanho' %}" class="btn btn-success mb-5">Cadastrar Tamanho</a>
         <h2>Tamanhos</h2>
