--- a/templates/core/fornecedores/listar.html
+++ b/templates/core/fornecedores/listar.html
@@ -2,6 +2,11 @@
 {% load static bootstrap %}
 {% block conteudo %} 
 
+<div class="text-center mb-4">
+    <h2 class="fw-bold"><i class="bi bi-truck text-primary"></i> Listagem de Fornecedores</h2>
+    <p class="lead">Gerencie seus fornecedores e mantenha o cadastro sempre atualizado para garantir o melhor relacionamento e controle de compras.</p>
+</div>
+
 <div class="container mt-5">
     <a href="{% url 'cadastrar_fornecedor' %}" class="btn btn-success mb-5">Cadastrar Fornecedor</a>
     <h2>Fornecedores</h2>
