--- a/templates/core/marca/listar.html
+++ b/templates/core/marca/listar.html
@@ -2,6 +2,11 @@
 {% load static bootstrap %}
 {% block conteudo %} 
 
+    <div class="text-center mb-4">
+        <h2 class="fw-bold"><i class="bi bi-tags text-primary"></i> Listagem de Marcas</h2>
+        <p class="lead">Gerencie as marcas dos seus produtos para facilitar a identificação, organização e análise de vendas.</p>
+    </div>
+
     <div class="container mt-5">
         <a href="{% url 'cadastrar_marca' %}" class="btn btn-success mb-5">Cadastrar Marcas</a>
         <h2>Marcas</h2>
