--- a/templates/users/cliente/aniversariantes.html
+++ b/templates/users/cliente/aniversariantes.html
@@ -26,7 +26,7 @@
                         <td>{{ cliente.data_aniversario }}</td>
                         <td>{{ cliente.telefone_celular }}</td>
                         <td>
-                            <a href="{% url 'editar_cliente' cliente.pk %}" class="btn btn-primary">Editar</a>                         
+                            <a class="btn btn-danger disabled">Notificar (Em breve)</a>                         
                         </td>
                     </tr>
                     {% endfor %}
