--- a/templates/users/cliente/lista_clientes.html
+++ b/templates/users/cliente/lista_clientes.html
@@ -3,6 +3,7 @@
 {% block conteudo %} 
 
     <div class="container mt-5">
+        <a href="{% url 'cadastrar_cliente' %}" class="btn btn-success mb-5">Cadastrar Cliente</a>
         <div class="text-center mb-4">
             <h2 class="fw-bold"><i class="bi bi-people text-primary"></i> Clientes</h2>
             <p class="lead">Monitore seus clientes e acompanhe suas compras para oferecer produtos alinhados aos valores e preferências deles.</p>
