--- a/templates/users/users/lista_usuarios.html
+++ b/templates/users/users/lista_usuarios.html
@@ -2,6 +2,11 @@
 {% load static bootstrap %}
 {% block conteudo %} 
 
+    <div class="text-center mb-4">
+        <h2 class="fw-bold"><i class="bi bi-people text-primary"></i> Listagem de Colaboradores</h2>
+        <p class="lead">Gerencie os colaboradores da sua empresa, visualize informações e mantenha o cadastro sempre atualizado para uma equipe organizada.</p>
+    </div>
+
     <div class="container mt-5">
         <a href="{% url 'cadastrar_usuario' %}" class="btn btn-success mb-5">Cadastrar Colaborador</a>
         <h2>Colaboradores</h2>
