:pushpin: Adicionando funcionalidade de imprimir pedidos em aberto

--- a/templates/core/pedido/lista_pedidos.html
+++ b/templates/core/pedido/lista_pedidos.html
@@ -10,6 +10,8 @@
     </style>
 
     <div class="container mt-5">
+        <a href="{% url 'cadastrar_pedido' %}" class="btn btn-success mb-5">Cadastrar Pedido</a>
+        <a href="{% url 'lista_pedidos_aberto' %}" class="btn btn-secondary mb-5">Imprimir</a>
         <div class="text-center mb-4">
             <h2 class="fw-bold"><i class="bi bi-bag text-primary"></i> Pedidos</h2>
             <p class="lead">Acompanhe seus pedidos e veja os produtos mais solicitados pelos seus clientes.</p>
