--- a/templates/core/notificacao/notificacao.html
+++ b/templates/core/notificacao/notificacao.html
@@ -6,7 +6,7 @@
     <h2>Pendências</h2>
     <ol class="list-group list-group-numbered">
       {% if aniversariantes %}
-        <li class="list-group-item d-flex justify-content-between align-items-start">
+        <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-action">
           <div class="ms-2 me-auto">
             <div class="fw-bold">Aniversáriantes!</div>
               Você tem clientes fazendo aniversário hoje.
@@ -18,7 +18,7 @@
       {% endif %}
       <br><br>
       {% if vales_presentes_vencendo %}
-        <li class="list-group-item d-flex justify-content-between align-items-start mt-2">
+        <li class="list-group-item d-flex justify-content-between align-items-start mt-2 list-group-item-action">
           <div class="ms-2 me-auto">
             <div class="fw-bold">Vale Presente Vencendo!</div>
               Você tem vale presente vencendo hoje.
