--- a/templates/agenda/cadastrar.html
+++ b/templates/agenda/cadastrar.html
@@ -2,8 +2,12 @@
 {% load static bootstrap form_tags %}
 {% block conteudo %} 
 
+    <div class="text-center mb-4">
+        <h2 class="fw-bold"><i class="bi bi-calendar-plus text-primary"></i> Cadastrar Evento</h2>
+        <p class="lead">Cadastre novos eventos na agenda para não perder compromissos importantes e manter o controle das suas atividades.</p>
+    </div>
+
     <div class="container mt-5">
-        <h2>Cadastrar Evento</h2>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.media}}
