--- a/templates/agenda/inicio.html
+++ b/templates/agenda/inicio.html
@@ -7,9 +7,9 @@
             <h2>AGENDA</h2>
             <div class="row d-flex align-items-start">
                 <div class="col-auto d-flex flex-column me-3">
-                    <a href="{% url 'cadastrar_evento' %}" class="btn btn-outline-success btn-lg mb-2">Cadastrar Evento</a>
-                    <a href="{% url 'evento_anual' %}" class="btn btn-outline-warning btn-lg mb-2">Eventos do ano</a>
-                    <a href="{% url 'evento_mes' %}" class="btn btn-outline-info btn-lg mb-2">Eventos do mês</a>
+                    <a href="{% url 'cadastrar_evento' %}" class="btn btn-success btn-lg mb-2">Cadastrar Evento</a>
+                    <a href="{% url 'evento_anual' %}" class="btn btn-warning btn-lg mb-2">Eventos do Ano</a>
+                    <a href="{% url 'evento_mes' %}" class="btn btn-info btn-lg mb-2">Eventos do Mês</a>
                 </div>
                 <div class="col">
                     <div id="calendar"></div>
