--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -318,7 +318,7 @@
                     </ul>
                     <h6 class="mt-3 text-secondary"><i class="bi bi-bar-chart-line"></i> Relatórios</h6>
                     <ul class="list-group mb-2">
-                        <a class="list-group-item list-group-item-action d-flex align-items-center mt-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Funcionalidade em construção">
+                        <a class="list-group-item list-group-item-action d-flex align-items-center mt-1" href="{% url 'relatorios_home' %}">
                             <i class="bi bi-graph-up-arrow me-2 text-secondary"></i> Relatórios
                         </a>
                     </ul>
